HUDW-224 fixed text wrapping issue and overflow-x

--- a/FJSHUD/app/styles/popups.less
+++ b/FJSHUD/app/styles/popups.less
@@ -46,15 +46,23 @@
 	  flex: 1;
 	  overflow-y: auto;
 	  height:inherit;
+	  overflow-x: hidden;
 	}
 	
 	.Section {
 	  display: inline-block;
 	  min-width: 48%;
-	  max-width: 300px;
+	  /*max-width: 300px;*/
+	  max_width: 100%;
 	  vertical-align: top;
 	  font-size: .9em;
 	  height:inherit;
+	  
+	  .AutoDelete{
+    	   width: 24% !important;
+    	   font-size: 0.75em;
+	  }
+	  
 	  & > div {
 		margin-bottom: .5em;
 	  }
@@ -543,10 +551,15 @@
 }
 .AutoDelete{
   background-color:#ccc;
-  width:76px;
+  width:24%;
   margin-right:1px;
-  height:30px;
-  line-height:30px;
+  height:2.5em;
+  line-height:2.5em;
   display:inline-block;
-  font-size:12px;
+  font-size:0.75em;
+  
+  input{  
+      position: relative;
+      top: 3px;
+  }
 } 
